--- a/DataPreprocess.ipynb
+++ b/DataPreprocess.ipynb
@@ -1288,6 +1288,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94d16e80",
+   "metadata": {},
+   "source": [
+    "### Remove the Row that ocr<0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "32b6c367",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_to_scale = df_to_scale[df_to_scale['ocr'] > 0] "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "01e8f5c1",
    "metadata": {},
    "source": [
