--- a/Integration_Strategy+OCR.ipynb
+++ b/Integration_Strategy+OCR.ipynb
@@ -190,7 +190,7 @@
    "id": "051489ae",
    "metadata": {},
    "source": [
-    "# Prediction"
+    "# Prediction with 4k-toTop-k"
    ]
   },
   {
